opentelemetry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontendingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: otel-demo.local.gd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-otel-demo-frontendproxy
            port:
              number: 8080
